# tftcalc

./: .gitignore  Cargo.toml  flake.nix  justfile
.github/: ci.yml
hooks/: pre-commit
src/: main.rs
src/calculator/: calculator.rs
src/interface/: interface_model.rs  mod.rs
src/tft/: constants.rs  game_state.rs  mod.rs  model.rs  tft_model.rs  tft_utils.rs
src/tft/sets/: mod.rs  set11.rs  set_model.rs
src/util/: linked_list.rs  macro_util.rs  math_utils.rs  mod.rs
