[package]
name = "tftcalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["sparse"] }
nalgebra-sparse = "0.9.0"
once_cell = "1.18.0"
thiserror = "1.0.50"
itertools = "0.12.1"

[dev-dependencies]
quickcheck = "1.0.3"
